code/tui/src/app/snapshots/app__session_manager_tests__dashboard_after_escape.snap
---
source: code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                            [— / —] [Dashboard]

























  ⏸ ask permissions on                                                                 ← Dashboard
  ────────────────────────────────────────────────────────────────────────────────────────────────
  >
  ─────────────────────────────────────────────────────────────────────────────── Automatic model

  Enter send  ·  shift+tab permissions
