code/tui/src/app/snapshots/app__session_manager_tests__dashboard_command_completion.snap
---
source: code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                            [— / —] [Dashboard]
























  ─────────────────────────────────────────────────────────────────────────────────────────── 1/1
  /dashboard                 open Dashboard
  ────────────────────────────────────────────────────────────────────────────────────────────────
  > /dashboard
  ─────────────────────────────────────────────────────────────────────────────── Automatic model

  Enter send
