code/tui/src/app/snapshots/app__session_manager_tests__dashboard_list_focused_before_escape.snap
---
source: code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                            [— / —] [Dashboard]

  Idle (1)
> ○ Snapshot session
  Archived (0)






















  ────────────────────────────────────────────────────────────────────────────────────────────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────────── Automatic model

  Enter to open · Space to preview · Ctrl+X to archive · i to details · Esc to return
