code/tui/src/app/snapshots/app__session_manager_tests__inline_dashboard_arrow_navigation.snap
---
source: code/tui/src/app/session_manager_tests.rs
expression: "frames.join(\"\\n\\n\")"
---
Dashboard (list focused: false)
    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘


  Idle (1)
  ○ Snapshot session
  已 归 档  (0)


















────────────────────────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────────────────────────

  →/Esc 返 回

Conversation after →


























                                                                                       ← Dashboard
────────────────────────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────────────────────────

  ⏸ 手 动

Dashboard (list focused: true)
    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘


  Idle (1)
> ○ Snapshot session
  已 归 档  (0)


















────────────────────────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────────────────────────

  Enter 打 开  · Space 预 览  · Ctrl+X 归 档  · i 详 情  · →/Esc 返 回
