code/tui/src/app/snapshots/app__session_manager_tests__inline_dashboard_return_help_chinese.snap
---
source: code/tui/src/app/session_manager_tests.rs
expression: output
---

    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘

> /help
















─ 帮 助  ─────────────────────────────────────────────────────────────────────────────────────────────

   快 捷 键     命 令     自 定 义 命 令
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ inline                                                                                       │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯
  →/Esc  ·  从  inline 仪 表 盘 返 回 ； 分 组 上 的 方 向 键 用 于 展 开 或 收 起

  Enter/Esc/Ctrl+C 返 回   ·  Tab/Shift+Tab 切 换
