code/tui/src/app/snapshots/app__session_manager_tests__inline_dashboard_right_edits_draft.snap
---
source: code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘


  Idle (1)
  ○ Snapshot session
  Archived (0)


















────────────────────────────────────────────────────────────────────────────────────────────────────
> dXraft
────────────────────────────────────────────────────────────────────────────────────────────────────

  Esc to return
